fix: vertical scrollbar appearing for saved payment method issue #724

--- a/src/less/main.less
+++ b/src/less/main.less
@@ -758,6 +758,7 @@
     text-align: left;
     text-overflow: ellipsis;
     overflow-x: hidden;
+    overflow-y: hidden;
 
     .braintree-method__label--small {
       font-size: 13px;
